@@ -1,3 +1,8 @@
+2003-12-30  Christian Neumair  <chris@gnome-de.org>
+
+	* info.c: (RepaintLogInfo): Use ngettext for plurals (#106700).
+	* zoom.c: Add missing gettext calls.
+
 2003-12-06  Jan Arne Petersen  <jpetersen@uni-bonn.de>
 
 	* logview/logview.c: (FileSelectResponse), (LoadLogMenu): Replace
